# C7Engine

./: .gitignore  .gitmodules  ApplicationTemplate.cpp  CMakeLists.txt  README.md  build.bat  build.sh  build_debug.bat
Dependencies/: README.md
Dependencies/GLEW/lib/Release/x64/: glew32sd.lib
Dependencies/GLFW/lib-vc2019/: glfw3.lib
Dependencies/GLM/glm/: CMakeLists.txt
Dependencies/freetype_lib/: freetype.lib
Dependencies/stbi/: CMakeLists.txt
application/: Application.h
assets/shaders/: text.shader  texture_bitmap.shader
engine/: Camera.cpp  Camera.h  CurrentBindings.cpp  Debug.cpp  Entity.cpp  Entity.h  Entrypoint.cpp  Entrypoint.h  FrameBuffer.cpp  FrameBuffer.h  MainIncl.h  Model.cpp  Model.h  Origine.cpp  Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  VertexManager.cpp  VertexManager.h  Window.cpp  Window.h  algs_3d.h  compact_string.cpp  compact_string.h  containers.cpp  containers.h  macros.h  math_basics.cpp  math_basics.h  memory.cpp  memory.h  text_renderer.cpp  text_renderer.h
engine/utils/: types.h
